# expOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: toolchain-aarch64-none-elf.cmake
scripts/: toolchain.sh
src/driver_display_ramfb/: CMakeLists.txt
src/driver_display_ramfb/include/: driver_display_ramfb.h
src/driver_display_ramfb/src/: driver_display_ramfb.c  driver_display_ramfb_internal.h
src/driver_uart/: CMakeLists.txt
src/driver_uart/include/: driver_uart.h
src/driver_uart/src/: driver_uart.c
src/kernel/: CMakeLists.txt  linker.ld
src/kernel/src/: main.c  start.S
src/logging/: CMakeLists.txt
src/logging/include/: logging.h
src/logging/src/: logging.c
src/shared/: CMakeLists.txt
src/shared/include/: shared.h
src/shared/src/: hasher.c  shared.c
